======================================================================================================================

XX XXX 2022
Version 5.5.0
======================================================================================================================
AllOverIt
  * Added IsNotNullOrEmpty() to string extensions

AllOverIt.Validation
  * Added ContainsModelRegistration() to IValidationRegistry
  * Added support for async validation and assertion

AllOverIt.Serialization
AllOverIt.Serialization.NewtonsoftJson
AllOverIt.Serialization.SystemTextJson
  * Improvements to JsonHelper and NestedDictionaryConverter to better handle case-insenstive property querying
    (NestedDictionaryConverter is now internal)


26 Apr 2022
Version 5.4.1
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync
  * Unsealed SchemaTypeAttribute and SchemaInputAttribute


26 Apr 2022
Version 5.4.0
======================================================================================================================
AllOverIt
  * Added support to concat dictionaries

AllOverIt.Aws.Cdk.AppSync
  * Updated SchemaScalarAttribute to support namespace-based name creation
  * Added support to SchemaEnumAttribute to support namespace-based name creation


26 Apr 2022
Version 5.3.1
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync
  * Correction to removing namespaces from custom schema types.


24 Apr 2022
Version 5.3.0
======================================================================================================================
AllOverIt.Validation
  * Added support to auto-discover and register validators with a ValidationInvoker, via an IValidationRegistry
    extension method and registrar classes inheriting ValidationRegistrarBase.


24 Apr 2022
Version 5.2.0